iOS/lib/libspotify.framework/Versions/12.1.51/Headers/api.h

typedef unsigned char bool;
/**
 * @defgroup types Spotify types & structs
 *
 * @{
 */

typedef struct sp_session sp_session; ///< Representation of a session
typedef struct sp_track sp_track; ///< A track handle
typedef struct sp_album sp_album; ///< An album handle
typedef struct sp_artist sp_artist; ///< An artist handle
typedef struct sp_search sp_search; ///< A handle to a search result
/** @} */

/**
 * @defgroup error Error Handling
 *
 * All functions in libspotify use the same set of error codes. Most of them return
 * an error code, and let the result of the operation be stored in an out-parameter.
 *
 * @{
 */

/**
 * Error codes returned by various functions
 */
typedef enum sp_error {
  SP_ERROR_OK                        = 0,  ///< No errors encountered
  SP_ERROR_BAD_API_VERSION           = 1,  ///< The library version targeted does not match the one you claim you support
  SP_ERROR_API_INITIALIZATION_FAILED = 2,  ///< Initialization of library failed - are cache locations etc. valid?
  SP_ERROR_TRACK_NOT_PLAYABLE        = 3,  ///< The track specified for playing cannot be played
  SP_ERROR_BAD_APPLICATION_KEY       = 5,  ///< The application key is invalid
  SP_ERROR_BAD_USERNAME_OR_PASSWORD  = 6,  ///< Login failed because of bad username and/or password
  SP_ERROR_USER_BANNED               = 7,  ///< The specified username is banned
  SP_ERROR_UNABLE_TO_CONTACT_SERVER  = 8,  ///< Cannot connect to the Spotify backend system
  SP_ERROR_CLIENT_TOO_OLD            = 9,  ///< Client is too old, library will need to be updated
  SP_ERROR_OTHER_PERMANENT           = 10, ///< Some other error occurred, and it is permanent (e.g. trying to relogin will not help)
  SP_ERROR_BAD_USER_AGENT            = 11, ///< The user agent string is invalid or too long
  SP_ERROR_MISSING_CALLBACK          = 12, ///< No valid callback registered to handle events
  SP_ERROR_INVALID_INDATA            = 13, ///< Input data was either missing or invalid
  SP_ERROR_INDEX_OUT_OF_RANGE        = 14, ///< Index out of range
  SP_ERROR_USER_NEEDS_PREMIUM        = 15, ///< The specified user needs a premium account
  SP_ERROR_OTHER_TRANSIENT           = 16, ///< A transient error occurred.
  SP_ERROR_IS_LOADING                = 17, ///< The resource is currently loading
  SP_ERROR_NO_STREAM_AVAILABLE       = 18, ///< Could not find any suitable stream to play
  SP_ERROR_PERMISSION_DENIED         = 19, ///< Requested operation is not allowed
  SP_ERROR_INBOX_IS_FULL             = 20, ///< Target inbox is full
  SP_ERROR_NO_CACHE                  = 21, ///< Cache is not enabled
  SP_ERROR_NO_SUCH_USER              = 22, ///< Requested user does not exist
  SP_ERROR_NO_CREDENTIALS            = 23, ///< No credentials are stored
  SP_ERROR_NETWORK_DISABLED          = 24, ///< Network disabled
  SP_ERROR_INVALID_DEVICE_ID         = 25, ///< Invalid device ID
  SP_ERROR_CANT_OPEN_TRACE_FILE      = 26, ///< Unable to open trace file
  SP_ERROR_APPLICATION_BANNED        = 27, ///< This application is no longer allowed to use the Spotify service
  SP_ERROR_OFFLINE_TOO_MANY_TRACKS   = 31, ///< Reached the device limit for number of tracks to download
  SP_ERROR_OFFLINE_DISK_CACHE        = 32, ///< Disk cache is full so no more tracks can be downloaded to offline mode
  SP_ERROR_OFFLINE_EXPIRED           = 33, ///< Offline key has expired, the user needs to go online again
  SP_ERROR_OFFLINE_NOT_ALLOWED       = 34, ///< This user is not allowed to use offline mode
  SP_ERROR_OFFLINE_LICENSE_LOST      = 35, ///< The license for this device has been lost. Most likely because the user used offline on three other device
  SP_ERROR_OFFLINE_LICENSE_ERROR     = 36, ///< The Spotify license server does not respond correctly
  SP_ERROR_SIGNUP_LOGIN              = 37,
  SP_ERROR_SIGNUP_ACCOUNT_MERGE_FAIL = 38,
  SP_ERROR_LASTFM_AUTH_ERROR         = 39, ///< A LastFM scrobble authentication error has occurred
  SP_ERROR_INVALID_ARGUMENT          = 40, ///< An invalid argument was specified
  SP_ERROR_SYSTEM_FAILURE            = 41, ///< An operating system error
} sp_error;
/**
 * Search types
 */
typedef enum sp_search_type {
  SP_SEARCH_STANDARD  = 0,
  SP_SEARCH_SUGGEST = 1,
} sp_search_type;
/** @} */



/**
 * @defgroup search Search subsystem
 * @{
 */

/**
 * The type of a callback used in sp_search_create()
 *
 * When this callback is called, the sp_track_is_loaded(), sp_album_is_loaded(),
 * and sp_artist_is_loaded() functions will return non-zero for the objects
 * contained in the search result.
 *
 * @param[in]   result          The same pointer returned by sp_search_create()
 * @param[in]   userdata        The opaque pointer given to sp_search_create()
 */
typedef void SP_CALLCONV search_complete_cb(sp_search *result, void *userdata);
/**
 * Create a search object from the given query
 *
 * @param[in]  session    Session
 * @param[in]  query      Query search string, e.g. 'The Rolling Stones' or 'album:"The Black Album"'
 * @param[in]  track_offset     The offset among the tracks of the result
 * @param[in]  track_count      The number of tracks to ask for
 * @param[in]  album_offset     The offset among the albums of the result
 * @param[in]  album_count      The number of albums to ask for
 * @param[in]  artist_offset    The offset among the artists of the result
 * @param[in]  artist_count     The number of artists to ask for
 * @param[in]  playlist_offset  The offset among the playlists of the result
 * @param[in]  playlist_count   The number of playlists to ask for
 * @param[in]  search_type      Type of search, can be used for suggest searches
 * @param[in]  callback   Callback that will be called once the search operation is complete. Pass NULL if you are not interested in this event.
 * @param[in]  userdata   Opaque pointer passed to \p callback
 *
 * @return                Pointer to a search object. To free the object, use sp_search_release()
 */
SP_LIBEXPORT(sp_search *) sp_search_create(sp_session *session, const char *query, int track_offset, int track_count, int album_offset, int album_count, int artist_offset, int artist_count, int playlist_offset, int playlist_count, sp_search_type search_type, search_complete_cb *callback, void *userdata);
/**
 * Get load status for the specified search. Before it is loaded, it will behave as an empty search result.
 *
 * @param[in]  search   Search object
 *
 * @return              True if search is loaded, otherwise false
 */
SP_LIBEXPORT(bool) sp_search_is_loaded(sp_search *search);
/**
* Check if search returned an error code.
*
* @param[in]   search     Search object
*
* @return                 One of the following errors, from ::sp_error
*                         SP_ERROR_OK
*                         SP_ERROR_IS_LOADING
*                         SP_ERROR_OTHER_PERMANENT
*                         SP_ERROR_OTHER_TRANSIENT
*/
SP_LIBEXPORT(sp_error) sp_search_error(sp_search *search);
/**
 * Get the number of tracks for the specified search
 *
 * @param[in]  search   Search object
 *
 * @return              The number of tracks for the specified search
 */
SP_LIBEXPORT(int) sp_search_num_tracks(sp_search *search);
/**
 * Return the track at the given index in the given search object
 *
 * @param[in]  search     Search object
 * @param[in]  index      Index of the wanted track. Should be in the interval [0, sp_search_num_tracks() - 1]
 *
 * @return                The track at the given index in the given search object
 */
SP_LIBEXPORT(sp_track *) sp_search_track(sp_search *search, int index);
/**
 * Get the number of albums for the specified search
 *
 * @param[in]  search   Search object
 *
 * @return              The number of albums for the specified search
 */
SP_LIBEXPORT(int) sp_search_num_albums(sp_search *search);
/**
 * Return the album at the given index in the given search object
 *
 * @param[in]  search     Search object
 * @param[in]  index      Index of the wanted album. Should be in the interval [0, sp_search_num_albums() - 1]
 *
 * @return                The album at the given index in the given search object
 */
SP_LIBEXPORT(sp_album *) sp_search_album(sp_search *search, int index);
/**
 * Get the number of artists for the specified search
 *
 * @param[in]  search   Search object
 *
 * @return              The number of artists for the specified search
 */
SP_LIBEXPORT(int) sp_search_num_artists(sp_search *search);
/**
 * Return the artist at the given index in the given search object
 *
 * @param[in]  search     Search object
 * @param[in]  index      Index of the wanted artist. Should be in the interval [0, sp_search_num_artists() - 1]
 *
 * @return                The artist at the given index in the given search object
 */
SP_LIBEXPORT(sp_artist *) sp_search_artist(sp_search *search, int index);
/**
 * Return the search query for the given search object
 *
 * @param[in]  search     Search object
 *
 * @return                The search query for the given search object
 */
SP_LIBEXPORT(const char *) sp_search_query(sp_search *search);
/**
 * Return the "Did you mean" query for the given search object
 *
 * @param[in]  search     Search object
 *
 * @return                The "Did you mean" query for the given search object, or the empty string if no such info is available
 */
SP_LIBEXPORT(const char *) sp_search_did_you_mean(sp_search *search);
/**
 * Return the total number of tracks for the search query - regardless of the interval requested at creation.
 * If this value is larger than the interval specified at creation of the search object, more search results are available.
 * To fetch these, create a new search object with a new interval.
 *
 * @param[in]  search     Search object
 *
 * @return                The total number of tracks matching the original query
 */
SP_LIBEXPORT(int) sp_search_total_tracks(sp_search *search);
/**
 * Return the total number of albums for the search query - regardless of the interval requested at creation.
 * If this value is larger than the interval specified at creation of the search object, more search results are available.
 * To fetch these, create a new search object with a new interval.
 *
 * @param[in]  search     Search object
 *
 * @return                The total number of albums matching the original query
 */
SP_LIBEXPORT(int) sp_search_total_albums(sp_search *search);
/**
 * Return the total number of artists for the search query - regardless of the interval requested at creation.
 * If this value is larger than the interval specified at creation of the search object, more search results are available.
 * To fetch these, create a new search object with a new interval.
 *
 * @param[in]  search     Search object
 *
 * @return                The total number of artists matching the original query
 */
SP_LIBEXPORT(int) sp_search_total_artists(sp_search *search);
/**
 * Increase the reference count of a search result
 *
 * @param[in]   search    The search result object
 * @return                One of the following errors, from ::sp_error
 *                        SP_ERROR_OK
 */
SP_LIBEXPORT(sp_error) sp_search_add_ref(sp_search *search);
/**
 * Decrease the reference count of a search result
 *
 * @param[in]   search    The search result object
 * @return                One of the following errors, from ::sp_error
 *                        SP_ERROR_OK
 */
SP_LIBEXPORT(sp_error) sp_search_release(sp_search *search);